# LearningTasksCPP

./: TickTackToe.cpp  readme.md
35_Module/: CMakeLists.txt
36_QtCircle/: CMakeLists.txt  main.cpp
ATM/: atm.cpp  readme.md
AlgorithmsTasks/: Task2.cpp  Task4.cpp  readme.md
AlgoritmsTasks/: Task1  Task3
Anagram/: anagram.cpp  readme.md
Audioplayer/: audioplayer.cpp  playlist.txt  readme.md
AvgTemplate/: CMakeLists.txt  main.cpp  readme.md
BirthdaysReminder/: b-days_reminder.cpp  readme.md
BubbleWrap/: BubbleWrap.cpp  readme.md
Calculator/: calculator.cpp  readme.md
CompanySimulator/: CMakeLists.txt  readme.md
CompanySimulator/src/: CMakeLists.txt  Employee.cpp  Head.cpp  Manager.cpp  main.cpp
DesktopWindow/: desktop_window.cpp  readme.md
ElfVillage/: CMakeLists.txt  readme.md
FishingExceptions/: CMakeLists.txt  main.cpp  readme.md
FishingGame/: fishing.cpp  readme.md
FloatingPointNumbersStitcher/: float_nums_stitcher.cpp  readme.md
GeometricFigures/: CMakeLists.txt  readme.md
Graph/: CMakeLists.txt  readme.md
Graph/src/: CMakeLists.txt  ListGraph.cpp  MatrixGraph.cpp  main.cpp
HTTPRequests/: CMakeLists.txt  main.cpp  readme.md
HeaderCatch/: CMakeLists.txt  main.cpp  readme.md
JSONAnalyse/: CMakeLists.txt  main.cpp  readme.md
JSONCreate/: CMakeLists.txt  main.cpp  readme.md
MacrosTasks/: Task1.cpp  Task2.cpp  Task3.cpp  readme.md
MathVector/: math_vector.cpp  readme.md
MatricesComparing/: MatricesComparing.cpp  readme.md
ShapeInterface/src/: CMakeLists.txt  Circle.cpp  Rectangle.cpp  Shape.cpp  Triangle.cpp  main.cpp
(+138 files in other folders)
